--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  pavonsuner2020segun,
+  author	= {Pav{\'o}n Lucero, Mar{\'i}a Victoria and Su{\~n}er
+		  Gratac{\`o}s, Avel·lina},
+  journal	= {Revista de la Sociedad Espa{\~n}ola de Ling{\"u}{\'i}stica},
+  number	= {2},
+  title		= {An{\'a}lisis composicional de dos usos de seg{\'u}n},
+  volume	= {50},
+  year		= {2020}
+}
+
 @Article{	  wagiel2022events,
   author	= {W{\k a}giel, Marcin},
   journal	= {Glossa: a journal of general linguistics},
