--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,39 @@
 
+@Article{	  pellegrino2011rate,
+  author	= {Pellegrino, Fran{\c c}ois and Marsico, Egidio and
+		  Coup{\'e}, Christophe},
+  journal	= {Language},
+  number	= {3},
+  pages		= {539--558},
+  title		= {A cross-language perspective on speech information rate},
+  volume	= {87},
+  year		= {2011}
+}
+
+@Book{		  garciafernandez1998aspecto,
+  address	= {Madrid},
+  author	= {Garc{\'i}a Fern{\'a}ndez, Luis},
+  publisher	= {Arco Libros},
+  title		= {El aspecto gramatical en la conjugaci{\'o}n},
+  year		= {1998}
+}
+
+@Book{		  garciafernandez2013tiempo,
+  address	= {Madrid},
+  author	= {Garc{\'i}a Fern{\'a}ndez, Luis},
+  publisher	= {Arco Libros},
+  title		= {El tiempo en la gram{\'a}tica},
+  year		= {2013}
+}
+
+@Book{		  morimoto1998aspecto,
+  address	= {Madrid},
+  author	= {Morimoto, Yuko},
+  publisher	= {Arco Libros},
+  title		= {El aspecto l{\'e}xico: delimitaci{\'o}n},
+  year		= {1998}
+}
+
 @Article{	  pavonsuner2020segun,
   author	= {Pav{\'o}n Lucero, Mar{\'i}a Victoria and Su{\~n}er
 		  Gratac{\`o}s, Avel·lina},
