--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,38 @@
 
+@Article{	  koss2022aspectual,
+  author	= {Koss, Tom and De Wit, Astrid and van der Auwera, Johan},
+  journal	= {Languages},
+  number	= {2},
+  pages		= {143},
+  title		= {The Aspectual Meaning of Non-Aspectual Constructions},
+  volume	= {7},
+  year		= {2022}
+}
+
+@Article{	  chomsky1977filters,
+  author	= {Chomsky, Noam and Lasnik, Howard},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {425--504},
+  title		= {Filters and Control},
+  volume	= {8},
+  year		= {1977}
+}
+
+@Article{	  gallego2022subordinacion,
+  author	= {Gallego, {\'A}ngel J. and Guti{\'e}rrez-Rodr{\'i}guez,
+		  Edita},
+  journal	= {Tejuelo. Did{\'a}ctica de la Lengua y la Literatura.
+		  Educaci{\'o}n},
+  number	= {2},
+  pages		= {173--204},
+  title		= {La subordinaci{\'o}n en el Glosario de t{\'e}rminos
+		  gramaticales. Teor{\'i}a, did{\'a}ctica y su aplicaci{\'o}n
+		  a la escritura},
+  volume	= {35},
+  year		= {2022}
+}
+
 @Article{	  pellegrino2011rate,
   author	= {Pellegrino, Fran{\c c}ois and Marsico, Egidio and
 		  Coup{\'e}, Christophe},
