--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  dalessandro2019generative,
+  author	= {D'Alessandro, Roberta},
+  journal	= {Catalan Journal of Linguistics},
+  pages		= {7},
+  title		= {Els assoliments de la sintaxi generativa: una gr{\`a}fica
+		  temporal},
+  year		= {2019}
+}
+
+@Article{	  leivada2022adjective,
+  author	= {Leivada, Evelina},
+  journal	= {Humanities and Social Sciences Communications},
+  number	= {1},
+  title		= {Determining the cognitive biases behind a viral linguistic
+		  universal: the order of multiple adjectives},
+  volume	= {9},
+  year		= {2022}
+}
+
 @Article{	  koss2022aspectual,
   author	= {Koss, Tom and De Wit, Astrid and van der Auwera, Johan},
   journal	= {Languages},
