--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,50 @@
 
+@Article{	  georgi2022resumption,
+  author	= {Georgi, Doreen and Amaechi, Mary},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Resumption in Igbo: Two types of resumptives, complex
+		  phi-mismatches, and dynamic deletion domains},
+  year		= {2022}
+}
+
+@InProceedings{	  bender2020meaning,
+  address	= {Stroudsburg, PA, USA},
+  author	= {Bender, Emily M. and Koller, Alexander},
+  booktitle	= {Proceedings of the 58th Annual Meeting of the Association
+		  for Computational Linguistics},
+  publisher	= {Association for Computational Linguistics},
+  title		= {Climbing towards NLU: On Meaning, Form, and Understanding
+		  in the Age of Data},
+  year		= {2020}
+}
+
+@Article{	  pavlick2022semantics,
+  author	= {Pavlick, Ellie},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {447--471},
+  title		= {Semantic Structure in Deep Learning},
+  volume	= {8},
+  year		= {2022}
+}
+
+@Article{	  moens1988temporal,
+  author	= {Moens, Marc and Steedman, Mark},
+  journal	= {Computational Linguistics},
+  number	= {2},
+  pages		= {15--28},
+  title		= {Temporal ontology and temporal reference},
+  volume	= {14},
+  year		= {1988}
+}
+
+@Article{	  abusch2022pictorial,
+  author	= {Abusch, Dorit and Rooth, Mats},
+  journal	= {Linguistics and Philosophy},
+  title		= {Pictorial free perception},
+  year		= {2022}
+}
+
 @Article{	  dalessandro2019generative,
   author	= {D'Alessandro, Roberta},
   journal	= {Catalan Journal of Linguistics},
@@ -7940,7 +7986,7 @@
   year		= {1997}
 }
 
-@Book{		  jurafsky2009speech,
+@Book{		  jurafsky2022speech,
   address	= {Upper Saddle River, N.J.},
   author	= {Jurafsky, Dan and Martin, James H.},
   pages		= {988},
@@ -7949,7 +7995,7 @@
 		  language processing, computational linguistics, and speech
 		  recognition},
   volume	= {Prentice Hall series in artificial intelligence},
-  year		= {2009}
+  year		= {2021}
 }
 
 @Article{	  moltmann2021cases,
