--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  neeleman2022subordination,
+  author	= {Neeleman, Ad and Philip, Joy and Tanaka, Misako and van de
+		  Koot, Hans},
+  journal	= {Syntax},
+  title		= {Subordination and binary branching},
+  year		= {2022}
+}
+
 @Article{	  georgi2022resumption,
   author	= {Georgi, Doreen and Amaechi, Mary},
   journal	= {Natural Language \& Linguistic Theory},
