--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,128 @@
 
+@Article{	  reed2011get,
+  author	= {Reed, Lisa A.},
+  journal	= {The Linguistic Review},
+  number	= {1},
+  title		= {Get-passives},
+  volume	= {28},
+  year		= {2011}
+}
+
+@Book{		  pietroski2005events,
+  author	= {Pietroski, Paul M.},
+  pages		= {276},
+  publisher	= {Oxford University Press on Demand},
+  title		= {Events and Semantic Architecture},
+  year		= {2005}
+}
+
+@Article{	  lasnik1988subjects,
+  author	= {Lasnik, Howard},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {1},
+  pages		= {1--17},
+  title		= {Subjects and the $\theta$-criterion},
+  volume	= {6},
+  year		= {1988}
+}
+
+@PhDThesis{	  green2018adjunct,
+  author	= {Greem, Jeffrey Jack},
+  school	= {University of Maryland},
+  title		= {Adjunct Control. Syntax and Procesing},
+  year		= {2018}
+}
+
+@Article{	  sigurdsson2012get,
+  author	= {Sigurðsson, Einar Freyr and Wood, Jim},
+  journal	= {Nordic Journal of Linguistics},
+  number	= {3},
+  pages		= {269--312},
+  title		= {Case alternations in Icelandic `get'-passives},
+  volume	= {35},
+  year		= {2012}
+}
+
+@Book{		  schafer2008anticausative,
+  address	= {Amsterdam},
+  author	= {Sch{\"a}fer, Florian},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {The Syntax of (Anti-)Causatives},
+  year		= {2008}
+}
+
+@Article{	  mcintyre2012get,
+  author	= {Mcintyre, Andrew},
+  journal	= {Linguistics},
+  number	= {6},
+  title		= {The BECOME=CAUSE hypothesis and the polysemy of get},
+  volume	= {50},
+  year		= {2012}
+}
+
+@Article{	  haegeman1985get,
+  author	= {Haegeman, Liliane},
+  journal	= {Lingua},
+  number	= {1},
+  pages		= {53--77},
+  title		= {The get-passive and burzio's generalization},
+  volume	= {66},
+  year		= {1985}
+}
+
+@Article{	  bruening2015vietnamese,
+  author	= {Bruening, Benjamin and Tran, Thuan},
+  journal	= {Lingua},
+  pages		= {133--172},
+  title		= {The nature of the passive, with an analysis of
+		  Vietnamese},
+  volume	= {165},
+  year		= {2015}
+}
+
+@Article{	  williams2009themes,
+  author	= {Williams, Alexander},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {686--700},
+  title		= {Themes, Cumulativity, and Resultatives: Comments on
+		  Kratzer 2003},
+  volume	= {40},
+  year		= {2009}
+}
+
+@InCollection{	  saebo2008criterion,
+  author	= {S{\ae}b{\o}, Kjell Johan},
+  booktitle	= {Event Structures in Linguistic Form and Interpretation},
+  pages		= {127-148},
+  publisher	= {DE GRUYTER},
+  title		= {The structure of criterion predicates},
+  year		= {2008}
+}
+
+@Article{	  bosse2012,
+  author	= {Bosse, Solveig and Bruening, Benjamin and Yamada,
+		  Masahiro},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {4},
+  pages		= {1185--1230},
+  title		= {Affected Experiencers},
+  volume	= {30},
+  year		= {2012}
+}
+
+@InCollection{	  horn2013dative,
+  author	= {Horn, Laurence R.},
+  booktitle	= {Beyond Expressives: Explorations in Use-Conditional
+		  Meaning},
+  editor	= {Gutzmann, Daniel and G{\"a}rtner, Hans-Martin},
+  pages		= {151-199},
+  publisher	= {BRILL},
+  title		= {I love me some datives: Expressive meaning, free datives,
+		  and F-implicature},
+  year		= {2013}
+}
+
 @Article{	  neeleman2022subordination,
   author	= {Neeleman, Ad and Philip, Joy and Tanaka, Misako and van de
 		  Koot, Hans},
