--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Article{	  ettinger2019negation,
+  author	= {Ettinger, Allyson},
+  journal	= {CoRR},
+  title		= {What BERT is not: Lessons from a new suite of
+		  psycholinguistic diagnostics for language models},
+  volume	= {abs/1907.13528},
+  year		= {2019}
+}
+
+@Article{	  fabregas2022aspect,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Borealis -- An International Journal of Hispanic
+		  Linguistics},
+  number	= {3},
+  pages		= {1--191},
+  title		= {Lexical aspect in Spanish: contrasts, syntactic structures
+		  and semantic interpretations},
+  volume	= {11},
+  year		= {2022}
+}
+
 @Article{	  reed2011get,
   author	= {Reed, Lisa A.},
   journal	= {The Linguistic Review},
@@ -27,7 +48,7 @@
 }
 
 @PhDThesis{	  green2018adjunct,
-  author	= {Greem, Jeffrey Jack},
+  author	= {Green, Jeffrey Jack},
   school	= {University of Maryland},
   title		= {Adjunct Control. Syntax and Procesing},
   year		= {2018}
