--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,119 @@
 
+@Article{	  pietrosk2010that,
+  author	= {Pietroski, Paul M.},
+  journal	= {The Journal of Philosophy},
+  number	= {2},
+  pages		= {655--662},
+  title		= {On Explaining That},
+  volume	= {97},
+  year		= {2010}
+}
+
+@PhDThesis{	  hartmann2012clausal,
+  address	= {Cambridge, Mass.},
+  author	= {Hartman, Jeremy},
+  school	= {MIT},
+  title		= {Varieties of clausal complementation},
+  year		= {2012}
+}
+
+@Article{	  keine2017tough,
+  author	= {Keine, Stefan and Poole, Ethan},
+  journal	= {The Linguistic Review},
+  number	= {2},
+  pages		= {295--329},
+  title		= {Intervention in tough-constructions revisited},
+  volume	= {34},
+  year		= {2017}
+}
+
+@Article{	  hacquard2009aspect,
+  author	= {Hacquard, Valentine},
+  journal	= {Linguistics and Philosophy},
+  number	= {3},
+  pages		= {279--315},
+  title		= {On the interaction of aspect and modal auxiliaries},
+  volume	= {32},
+  year		= {2009}
+}
+
+@InBook{	  grano2016aspect,
+  author	= {Grano, Thomas},
+  booktitle	= {Proceedings of Sinn und Bedeutung 20},
+  editor	= {Bade, Nadine and Berezovskaya, Polina Sch{\"o}ller,
+		  Anthea},
+  publisher	= {aspect evidentiality modality resultar},
+  title		= {Semantic consequences of syntactic subject licensing:
+		  Aspectual predicates and concealed modalit},
+  year		= {2016}
+}
+
+@Article{	  duffley2003gerund,
+  author	= {Duffley, Patrick J.},
+  journal	= {Journal of English Linguistics},
+  number	= {4},
+  pages		= {324--352},
+  title		= {The Gerund and the to-Infinitive as Subject},
+  volume	= {31},
+  year		= {2003}
+}
+
+@Article{	  beavers2010lexical,
+  author	= {Beavers, John},
+  journal	= {Language},
+  number	= {4},
+  pages		= {821--864},
+  title		= {The structure of lexical meaning: Why semantics really
+		  matters},
+  volume	= {86},
+  year		= {2010}
+}
+
+@Article{	  arregui2007aspect,
+  author	= {Arregui, Ana},
+  journal	= {Natural Language Semantics},
+  number	= {3},
+  pages		= {221--264},
+  title		= {When aspect matters: the case of would-conditionals},
+  volume	= {15},
+  year		= {2007}
+}
+
+@Article{	  beavers2011affectedness,
+  author	= {Beavers, John},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {2},
+  pages		= {335--370},
+  title		= {On affectedness},
+  volume	= {29},
+  year		= {2011}
+}
+
+@Article{	  lasnik1974complement,
+  author	= {Lasnik, Howard and Fiengo, Robert},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  title		= {Complement Object Deletion},
+  volume	= {5},
+  year		= {1974}
+}
+
+@Book{		  lasnik1989,
+  address	= {Dordrecht},
+  author	= {Lasnik, Howard},
+  publisher	= {Springer Netherlands},
+  title		= {Essays on Anaphora},
+  year		= {1989}
+}
+
+@Book{		  slabakova2016,
+  author	= {Slabakova, Roumyana},
+  pages		= {506},
+  publisher	= {Oxford University Press},
+  title		= {Second Language Acquisition},
+  year		= {2016}
+}
+
 @Article{	  ettinger2019negation,
   author	= {Ettinger, Allyson},
   journal	= {CoRR},
