--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Book{		  lasnik2022structure,
+  author	= {Lasnik, Howard and Uriagereka, Juan},
+  publisher	= {The MIT Press},
+  title		= {Structure},
+  year		= {2022}
+}
+
 @Article{	  pietrosk2010that,
   author	= {Pietroski, Paul M.},
   journal	= {The Journal of Philosophy},
