--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,56 @@
 
+@InBook{	  kratzer2013modality21,
+  address	= {Geneva-Paris},
+  author	= {Kratzer, Angelika},
+  booktitle	= {The Language Cognition Interface / L›Interface
+		  Language-Cognition},
+  editor	= {Anderson, S. R. and Moeschler, J. and Reboul, F.},
+  publisher	= {Librairie Droz},
+  title		= {Modality for the 21st Century},
+  year		= {2013}
+}
+
+@Article{	  hallman2004np,
+  author	= {Hallman, Peter},
+  journal	= {Language},
+  number	= {4},
+  pages		= {707--747},
+  title		= {NP-Interpretation and the Structure of Predicates},
+  volume	= {80},
+  year		= {2004}
+}
+
+@InProceedings{	  wagner2022focus,
+  address	= {Silicon Valley},
+  author	= {Wagner, Michael},
+  booktitle	= {Proceedings of the West Coast Conference on Formal
+		  Linguistics (WCCFL)},
+  publisher	= {Stanford University},
+  title		= {Syntactic Alternative Projection},
+  volume	= {40},
+  year		= {2022}
+}
+
+@Book{		  raposo2013,
+  address	= {Coimbra, Portugal},
+  editor	= {Paiva Raposo, Eduardo and Bacelar do Nascimento, Maria
+		  Fernanda and Coelho da Mota, Maria Ant{\'o}nia and Segura,
+		  Lu{\'i}sa and Mendes, Am{\'a}lia},
+  publisher	= {Funda{\c c}{\~a}o Galouste Gulbenkian},
+  title		= {Gram{\'a}tica do portugu{\^e}s},
+  year		= {2013}
+}
+
+@Book{		  abeille2021,
+  address	= {Arles, Paris},
+  editor	= {Abeill{\'e}, Anne and Godard, Dani{\`e}le and Delaveau,
+		  Annie and Gautier, Antoine},
+  pages		= {2 volumes (lvii, 2537 pages)},
+  publisher	= {Actes sud; Imprimerie nationale {\'e}ditions},
+  title		= {La grande grammaire du fran{\c c}ais: GGF},
+  year		= {2021}
+}
+
 @Book{		  lasnik2022structure,
   author	= {Lasnik, Howard and Uriagereka, Juan},
   publisher	= {The MIT Press},
