--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,44 @@
 
+@PhDThesis{	  paille2022,
+  address	= {Montr{\'e}al},
+  author	= {Paill{\'e}, Mathieu},
+  school	= {McGill University},
+  title		= {Strengthening Predicates},
+  year		= {2022}
+}
+
+@PhDThesis{	  liter2022,
+  author	= {Liter, Adam},
+  school	= {University of Maryland},
+  title		= {Explorations in Diagnosing Competence and Performance
+		  Factors in Linguistic Inquiry},
+  year		= {2022}
+}
+
+@Article{	  mandelbaum2022lot,
+  author	= {Mandelbaum, E and Dunham, Y and Feiman, R and Firestone, C
+		  and Green, EJ and Harris, D and Kibbe, MM and Kurdi, B and
+		  Mylopoulos, M and Shepherd, J and Wellwood, A and Porot, N
+		  and Quilty-Dunn, J},
+  journal	= {Cogn Sci},
+  number	= {12},
+  title		= {Problems and Mysteries of the Many Languages of Thought.},
+  volume	= {46},
+  year		= {2022}
+}
+
+@Article{	  alvarezlopez2021rain,
+  author	= {{\'A}lvarez L{\'o}pez, Yadira},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {From meteorology to linguistics: what precipitation
+		  constructions in English, French and Spanish tell us about
+		  arguments, argumenthood, and the architecture of the
+		  grammar},
+  volume	= {6},
+  year		= {2021}
+}
+
 @InBook{	  kratzer2013modality21,
   address	= {Geneva-Paris},
   author	= {Kratzer, Angelika},
