--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,125 @@
 
+@Article{	  rullmann2022futurate,
+  author	= {Rullmann, Hotze and Huijsmans, Marianne and Matthewson,
+		  Lisa and Todorovi{\'c}, Neda},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {197--208},
+  title		= {Why Plain Futurates are Different},
+  volume	= {54},
+  year		= {2022}
+}
+
+@Article{	  mendes2022ellipsis,
+  author	= {Mendes, Gesoel and Nevins, Andrew},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {182--196},
+  title		= {When Ellipsis Can Save Defectiveness and When It Can't},
+  volume	= {54},
+  year		= {2022}
+}
+
+@Article{	  dayal2022index,
+  author	= {Dayal, Veneeta and Jiang, Li Julie},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {147--167},
+  title		= {The Puzzle of Anaphoric Bare Nouns in Mandarin: A
+		  Counterpoint to <i>Index!</i},
+  volume	= {54},
+  year		= {2022}
+}
+
+@Article{	  johnson2022suppletion,
+  author	= {Johnson, Kimberly},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {169--181},
+  title		= {Suppletion in a Three-Way Number System: Evidence from
+		  Creek},
+  volume	= {54},
+  year		= {2022}
+}
+
+@Article{	  moltmann2022light,
+  author	= {Moltmann, Friederike},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {117--146},
+  title		= {Names, Light Nouns, and Countability},
+  volume	= {54},
+  year		= {2022}
+}
+
+@Article{	  branan2022locality,
+  author	= {Branan, Kenyon},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {1--38},
+  title		= {Locality and Antilocality: The Logic of Conflicting
+		  Requirements},
+  volume	= {54},
+  year		= {2022}
+}
+
+@Article{	  martinovic2022feature,
+  author	= {Martinovi{\'c}, Martina},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {79--116},
+  title		= {Feature Geometry and Head Splitting in the Wolof Clausal
+		  Periphery},
+  volume	= {54},
+  year		= {2022}
+}
+
+@Article{	  safir2022phase,
+  author	= {Safir, Ken},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {209--217},
+  title		= {Extended Phase Boundaries and the Spell-Out Trap},
+  volume	= {54},
+  year		= {2022}
+}
+
+@Article{	  clem2022cyclic,
+  author	= {Clem, Emily},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {39--78},
+  title		= {Cyclic Expansion in Agree: Maximal Projections as Probes},
+  volume	= {54},
+  year		= {2022}
+}
+
+@Article{	  collins2007syntax,
+  author	= {Collins, John},
+  journal	= {Mind},
+  number	= {464},
+  pages		= {805--850},
+  title		= {Syntax, More or Less},
+  volume	= {116},
+  year		= {2007}
+}
+
+@Book{		  brennan2022neuro,
+  author	= {Brennan, Jonathan R.},
+  pages		= {224},
+  publisher	= {Oxford University Press, USA},
+  title		= {Language and the Brain: A Slim Guide to Neurolinguistics},
+  year		= {2022}
+}
+
+@Book{		  chaitin2003limtis,
+  address	= {New York},
+  author	= {Chaitin, Gregory J.},
+  publisher	= {Springer},
+  title		= {The limits of mathematics},
+  year		= {2003}
+}
+
 @PhDThesis{	  paille2022,
   address	= {Montr{\'e}al},
   author	= {Paill{\'e}, Mathieu},
