--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -26,7 +26,7 @@
   number	= {1},
   pages		= {147--167},
   title		= {The Puzzle of Anaphoric Bare Nouns in Mandarin: A
-		  Counterpoint to <i>Index!</i},
+		  Counterpoint to Index!},
   volume	= {54},
   year		= {2022}
 }
