--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  poeppel2022words,
+  author	= {Poeppel, David and Idsardi, William},
+  journal	= {Trends Cogn Sci},
+  number	= {12},
+  pages		= {1054--1055},
+  title		= {We don't know how the brain stores anything, let alone
+		  words.},
+  volume	= {26},
+  year		= {2022}
+}
+
 @Article{	  rullmann2022futurate,
   author	= {Rullmann, Hotze and Huijsmans, Marianne and Matthewson,
 		  Lisa and Todorovi{\'c}, Neda},
