--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  wiltschko2015animacy,
+  author	= {Wiltschko, Martina and Ritter, Elizabeth},
+  journal	= {The Linguistic Review},
+  number	= {4},
+  title		= {Animating the narrow syntax},
+  volume	= {32},
+  year		= {2015}
+}
+
 @Article{	  poeppel2022words,
   author	= {Poeppel, David and Idsardi, William},
   journal	= {Trends Cogn Sci},
