--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  bosque2015hasta,
+  author	= {Bosque, Ignacio and Bravo, Ana},
+  journal	= {Isogloss. A journal on variation of Romance and Iberian
+		  languages},
+  number	= {1},
+  pages		= {1-31},
+  title		= {Temporal prepositions and intervals in Spanish. Variation
+		  in the grammar of `hasta' and `desde'},
+  volume	= {1},
+  year		= {2015}
+}
+
 @Article{	  wiltschko2015animacy,
   author	= {Wiltschko, Martina and Ritter, Elizabeth},
   journal	= {The Linguistic Review},
