--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  folli2007causative,
+  author	= {Folli, Raffaella and Harley, Heidi},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {197--238},
+  title		= {Causation, Obligation, and Argument Structure: On the
+		  Nature of Little v},
+  volume	= {38},
+  year		= {2007}
+}
+
 @Article{	  bosque2015hasta,
   author	= {Bosque, Ignacio and Bravo, Ana},
   journal	= {Isogloss. A journal on variation of Romance and Iberian
