--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@PhDThesis{	  cabezas2013entre,
+  address	= {Madrid},
+  author	= {Cabezas Holgado, Emilio},
+  school	= {Universidad Complutense de Madrid},
+  title		= {La predicaci{\'o}n: las construcciones en abanico:
+		  aplicaciones al espa{\~n}ol},
+  year		= {2013}
+}
+
 @Article{	  folli2007causative,
   author	= {Folli, Raffaella and Harley, Heidi},
   journal	= {Linguistic Inquiry},
