--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  pineda2023faire,
+  author	= {Pineda, Anna and Sheehan, Michelle},
+  journal	= {Syntax},
+  title		= {A Cyclic Agree account of the Romance
+		  \textit{faire}--infinitive causative: New evidence from
+		  Catalan},
+  year		= {2023}
+}
+
 @PhDThesis{	  cabezas2013entre,
   address	= {Madrid},
   author	= {Cabezas Holgado, Emilio},
