--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,49 @@
 
+@Article{	  folli2006waltzing,
+  author	= {Folli, Raffaella and Harley, Heidi},
+  journal	= {Studia Linguistica},
+  number	= {2},
+  pages		= {121--155},
+  title		= {On the licensing of causatives of directed motion:
+		  Waltzing Matilda all over},
+  volume	= {60},
+  year		= {2006}
+}
+
+@InBook{	  stowell1991restructuring,
+  address	= {Cambridge, Mass.},
+  author	= {Stowell, Tim},
+  booktitle	= {Principles and parameters in comparative grammar},
+  editor	= {Freidin, Robert},
+  pages		= {189-218},
+  publisher	= {MIT Press},
+  title		= {Small Clause Restructuring},
+  year		= {1991}
+}
+
+@InBook{	  bierwisch2003heads,
+  address	= {Berlin; New York},
+  author	= {Bierwisch, Manfred},
+  booktitle	= {Modifying adjuncts},
+  editor	= {Lang, Ewald and Maienborn, Claudia and Fabricius-Hansen,
+		  Cathrine},
+  publisher	= {Mouton de Gruyter},
+  title		= {Heads, complements and adjuncts: Projection and
+		  saturation},
+  year		= {2003}
+}
+
+@Book{		  lang2003adjuncts,
+  address	= {Berlin; New York},
+  editor	= {Lang, Ewald and Maienborn, Claudia and Fabricius-Hansen,
+		  Cathrine},
+  pages		= {vi, 657},
+  publisher	= {Mouton de Gruyter},
+  title		= {Modifying adjuncts},
+  volume	= {4},
+  year		= {2003}
+}
+
 @Article{	  pineda2023faire,
   author	= {Pineda, Anna and Sheehan, Michelle},
   journal	= {Syntax},
