--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,73 @@
 
+@Article{	  boneh2010possession,
+  author	= {Boneh, Nora and Sichel, Ivy},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {1},
+  pages		= {1--40},
+  title		= {Deconstructing possession},
+  volume	= {28},
+  year		= {2010}
+}
+
+@Article{	  espanol1997inalienable,
+  author	= {Espa{\~n}ol-Echevarr{\'i}a, Manuel},
+  journal	= {Lingua},
+  number	= {3-4},
+  pages		= {211--244},
+  title		= {Inalienable possession in copulative contexts and the
+		  DP-structure},
+  volume	= {101},
+  year		= {1997}
+}
+
+@Article{	  bosque2021def,
+  author	= {Bosque, Ignacio},
+  journal	= {Lingu{\'i}stica: Revista de Estudos Lingu{\'i}sticos da
+		  Universidade do Porto},
+  number	= {esp},
+  pages		= {347--365},
+  title		= {Demonstratives, definiteness effects and the type-token
+		  distinction},
+  year		= {2021}
+}
+
+@Article{	  gutierrezrexach2000tener,
+  author	= {Guti{\'e}rrez-Rexach, Javier},
+  journal	= {Cuadernos de Ling{\"u}{\'i}stica (Instituto Ortega y
+		  Gasset)},
+  pages		= {19--37},
+  title		= {Tener y el efecto de definitud},
+  volume	= {7},
+  year		= {2000}
+}
+
+@InBook{	  duarte2009predicados,
+  address	= {Joao Pessoa},
+  author	= {Duarte, In{\^e}s and Cola{\c c}o, Madalena and Gon{\c
+		  c}alves, Anabela and Mendes, Am{\'a}lia and Miguel, Matilde},
+  booktitle	= {Anais do VI Congresso Internacional da Abralin},
+  editor	= {Hora, Demerval da},
+  pages		= {1858-1867},
+  publisher	= {Idea},
+  title		= {Predicados complexos do tipo verbo leve-nome derivado: uma
+		  an{\'a}lise baseada em corpora},
+  year		= {2009}
+}
+
+@InBook{	  raposo2013copulativas,
+  address	= {Coimbra, Portugal},
+  author	= {Buzaglo Paiva Raposo, Eduardo},
+  booktitle	= {Gram{\'a}tica do portugu{\^e}s},
+  editor	= {Buzaglo Paiva Raposo, Eduardo and Bacelar do Nascimento,
+		  Maria Fernanda and Coelho da Mota, Maria Ant{\'o}nia and
+		  Segura, Lu{\'i}sa and Mendes, Am{\'a}lia},
+  pages		= {1285-1356},
+  publisher	= {Funda{\c c}{\~a}o Galouste Gulbenkian},
+  title		= {Ora{\c c}{\=o}es copulativas e predica{\c c}{\=o}es
+		  secundarias},
+  year		= {2013}
+}
+
 @Article{	  folli2006waltzing,
   author	= {Folli, Raffaella and Harley, Heidi},
   journal	= {Studia Linguistica},
