--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@Article{	  zakkou2021evaluativity,
+  author	= {Zakkou, Julia},
+  journal	= {Australasian Journal of Philosophy},
+  pages		= {1--15},
+  title		= {Conventional Evaluativity},
+  year		= {2021}
+}
+
+@Article{	  willemsen2021thick,
+  author	= {Willemsen, Pascale and Reuter, Kevin and Philosophy,
+		  Documentation Center},
+  journal	= {Thought: A Journal of Philosophy},
+  number	= {2},
+  pages		= {135--146},
+  title		= {Separating the evaluative from the descriptive},
+  volume	= {10},
+  year		= {2021}
+}
+
+@Article{	  berskyte2023,
+  author	= {Ber{\v s}kyt{\.e}, Justina and Stevens, Graham},
+  journal	= {Linguistics and Philosophy},
+  number	= {1},
+  pages		= {31--64},
+  title		= {Faultless disagreement without contradiction:
+		  expressive-relativism and predicates of personal taste},
+  volume	= {46},
+  year		= {2023}
+}
+
 @Article{	  boneh2010possession,
   author	= {Boneh, Nora and Sichel, Ivy},
   journal	= {Natural Language and Linguistic Theory},
