--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,65 @@
 
+@Article{	  zyman2023hyper,
+  author	= {Zyman, Erik},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {29--48},
+  title		= {Raising out of Finite Clauses (Hyperraising)},
+  volume	= {9},
+  year		= {2023}
+}
+
+@Article{	  scott-phillips2023animal,
+  author	= {Scott-Phillips, Thom and Heintz, Christophe},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {93--111},
+  title		= {Animal Communication in Linguistic and Cognitive
+		  Perspective},
+  volume	= {9},
+  year		= {2023}
+}
+
+@Article{	  donatelli2023compositionality,
+  author	= {Donatelli, Lucia and Koller, Alexander},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {463--481},
+  title		= {Compositionality in Computational Linguistics},
+  volume	= {9},
+  year		= {2023}
+}
+
+@Article{	  yu2023change,
+  author	= {Yu, Alan C.L.},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {215--231},
+  title		= {The Actuation Problem},
+  volume	= {9},
+  year		= {2023}
+}
+
+@Article{	  ladd2023prosody,
+  author	= {Ladd, D. Robert and Arvaniti, Amalia},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {171--193},
+  title		= {Prosodic Prominence Across Languages},
+  volume	= {9},
+  year		= {2023}
+}
+
+@Article{	  pearson2023first,
+  author	= {Pearson, Hazel},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {293--311},
+  title		= {Impersonal Pronouns and First-Person Perspective},
+  volume	= {9},
+  year		= {2023}
+}
+
 @Article{	  zakkou2021evaluativity,
   author	= {Zakkou, Julia},
   journal	= {Australasian Journal of Philosophy},
