--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Article{	  vayrynen2022normative,
+  author	= {Vayrynen, Pekka},
+  journal	= {Journal of Ethics and Social Philosophy},
+  number	= {2},
+  title		= {Practical Commitment in Normative Discourse},
+  volume	= {21},
+  year		= {2022}
+}
+
+@PhDThesis{	  schlenker1999propositional,
+  address	= {Cambridge, Mass.},
+  author	= {Schlenker, Philippe},
+  school	= {MIT},
+  title		= {Propositional attitudes and indexicality: a cross
+		  categorial approach},
+  year		= {1999}
+}
+
 @Article{	  zyman2023hyper,
   author	= {Zyman, Erik},
   journal	= {Annual Review of Linguistics},
