--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,82 @@
 
+@Article{	  flickinger1994easy,
+  author	= {Flickinger, Dan and Nerbonne, John},
+  journal	= {Computational Linguistics},
+  number	= {3},
+  title		= {Inheritance and Complementation: A Case Study of Easy
+		  Adjectives and Related Nouns},
+  volume	= {18},
+  year		= {1994}
+}
+
+@Article{	  chung1996easy,
+  author	= {Chung, Yook-Suk and Gamon, David},
+  journal	= {Annual Meeting of the Berkeley Linguistics Society},
+  number	= {1},
+  pages		= {58},
+  title		= {`Easy'-Class Adjectives in Old English: A Constructional
+		  Approach},
+  volume	= {22},
+  year		= {1996}
+}
+
+@Article{	  hicks2009tough,
+  author	= {Hicks, Glyn},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {535--566},
+  title		= {Tough Constructions and Their Derivation},
+  volume	= {40},
+  year		= {2009}
+}
+
+@Article{	  grishin2023algonquian,
+  author	= {Grishin, Peter},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Omnivorous third person agreement in Algonquian},
+  volume	= {8},
+  year		= {2023}
+}
+
+@Article{	  alonso-ovalle2023siquiera,
+  author	= {Alonso-Ovalle, Luis and Heredia Murillo, Elizabeth},
+  journal	= {Glossa: a journal of general linguistics},
+  title		= {Concessive scalar particles: Symmetric vs. non- symmetric
+		  alternatives. The case of Spanish siquiera},
+  year		= {2023}
+}
+
+@Article{	  paparounas2023first,
+  author	= {Paparounas, Lefteris and Salzmann, Martin},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {First Conjunct Clitic Doubling, the Person Case
+		  Constraint, and First Conjunct Agreement: Insights from
+		  Modern Greek},
+  volume	= {8},
+  year		= {2023}
+}
+
+@Article{	  shen2023coordinate,
+  author	= {Shen, Zheng},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Conjunction Agreement and the Coordinate Structure
+		  Constraint},
+  volume	= {8},
+  year		= {2023}
+}
+
+@Book{		  larson2022semantics,
+  address	= {Cambridge, Mass.},
+  author	= {Larson, Richard K.},
+  pages		= {497},
+  publisher	= {MIT Press},
+  title		= {Semantics as Science},
+  year		= {2022}
+}
+
 @Article{	  vayrynen2022normative,
   author	= {Vayrynen, Pekka},
   journal	= {Journal of Ethics and Social Philosophy},
