--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  fabregas2023events,
+  author	= {F{\'a}bregas, Antonio and Mar{\'i}n, Rafael and
+		  Perpi{\~n}{\'a}n, S{\'i}lvia},
+  journal	= {Linguistics},
+  number	= {0},
+  title		= {Events always take (place with) ser},
+  volume	= {0},
+  year		= {2023}
+}
+
 @Article{	  flickinger1994easy,
   author	= {Flickinger, Dan and Nerbonne, John},
   journal	= {Computational Linguistics},
