--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,87 @@
 
+@Article{	  abeille2006legeretef,
+  author	= {Abeill{\'e}, Anne and Godard, Dani{\`e}le},
+  journal	= {Lingvisticae Investigationes},
+  number	= {1},
+  pages		= {11--24},
+  title		= {La l{\'e}g{\`e}ret{\'e} en fran{\c c}ais comme
+		  d{\'e}ficience de mobilit{\'e}},
+  volume	= {29},
+  year		= {2006}
+}
+
+@Article{	  abeille2004legerete,
+  author	= {Abeill{\'e}, Anne and Godard, Dani{\`e}le},
+  journal	= {Bulletin de la Soci{\'e}t{\'e} de Linguistique de Paris},
+  number	= {1},
+  pages		= {69--106},
+  title		= {De la l{\'e}g{\`e}ret{\'e} en syntaxe},
+  volume	= {99},
+  year		= {2004}
+}
+
+@Article{	  yu2023roots,
+  author	= {Yu, Jianrong and Ausensi, Josep and Smith, Ryan Walter},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {States and changes-of-state in the semantics of result
+		  roots},
+  year		= {2023}
+}
+
+@InBook{	  abeille2000weight,
+  address	= {San Diego},
+  author	= {Abeill{\'e}, Anne and Godard, Dani{\`e}le},
+  booktitle	= {The Nature and Function of Syntactic Categories},
+  editor	= {Borsley, Robert D.},
+  pages		= {325-361},
+  publisher	= {Brill Academic Pub},
+  title		= {French word order and lexical weight},
+  year		= {2000}
+}
+
+@Book{		  borsley2000syntax,
+  address	= {San Diego},
+  editor	= {Borsley, Robert D.},
+  publisher	= {Brill Academic Pub},
+  title		= {The Nature and Function of Syntactic Categories},
+  year		= {2000}
+}
+
+@Book{		  godard2009fundamental,
+  address	= {Stanford, CA},
+  editor	= {Godard, Dani{\`e}le},
+  publisher	= {CSLI Publications},
+  title		= {Fundamental issues in the Romance languages},
+  year		= {2009}
+}
+
+@Article{	  grimm2011semantics,
+  author	= {Grimm, Scott},
+  journal	= {Morphology},
+  number	= {3},
+  pages		= {515--544},
+  title		= {Semantics of case},
+  volume	= {21},
+  year		= {2011}
+}
+
+@Article{	  abeille2006a,
+  author	= {Abeill{\'e}, Anne},
+  journal	= {Empirical issues in syntax and semantics},
+  pages		= {7--36},
+  title		= {In defense of lexical coordination},
+  volume	= {6},
+  year		= {2006}
+}
+
+@Article{	  schwarz2023prefield,
+  author	= {Schwarz, Bernhard},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Structure preservation in complex prefields: A note on
+		  M{\"u}ller (2018)},
+  year		= {2023}
+}
+
 @Article{	  fabregas2023events,
   author	= {F{\'a}bregas, Antonio and Mar{\'i}n, Rafael and
 		  Perpi{\~n}{\'a}n, S{\'i}lvia},
