--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Article{	  zukoff2023mirror,
+  author	= {Zukoff, Sam},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {1},
+  pages		= {399--458},
+  title		= {The Mirror Alignment Principle},
+  volume	= {41},
+  year		= {2023}
+}
+
+@Article{	  poole2023case,
+  author	= {Poole, Ethan},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {1},
+  pages		= {347--397},
+  title		= {Improper case},
+  volume	= {41},
+  year		= {2023}
+}
+
 @Article{	  abeille2006legeretef,
   author	= {Abeill{\'e}, Anne and Godard, Dani{\`e}le},
   journal	= {Lingvisticae Investigationes},
