--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,51 @@
 
+@Article{	  mchugh2023cause,
+  author	= {McHugh, Dean Michael},
+  journal	= {Glossa: a journal of general linguistics},
+  title		= {Exhaustification in the semantics of cause and because},
+  year		= {2023}
+}
+
+@Book{		  peterson2007applicative,
+  address	= {Oxford},
+  author	= {Peterson, David A.},
+  pages		= {307},
+  publisher	= {Oxford University Press},
+  title		= {Applicative Constructions},
+  year		= {2007}
+}
+
+@InBook{	  pustejovsky1988geometry,
+  address	= {Cambridge, Mass},
+  author	= {Pustejovsky, James},
+  booktitle	= {Studies in Generative Approaches to Aspect, Lexicon
+		  project Working Papers 24},
+  editor	= {Tenny, Carol},
+  pages		= {19-39},
+  publisher	= {MITWPL},
+  title		= {The Geometry of Events},
+  year		= {1988}
+}
+
+@PhDThesis{	  vanalem2023phi,
+  address	= {Amsterdam},
+  author	= {van Alem, Astrid},
+  school	= {LOT},
+  title		= {Life of Phi: Phi-features in West Germanic and the
+		  syntax-morphology interface},
+  year		= {2023}
+}
+
+@Article{	  pustejovsky1991event,
+  author	= {Pustejovsky, James},
+  journal	= {Cognition},
+  number	= {1-3},
+  pages		= {47--81},
+  title		= {The syntax of event structure},
+  volume	= {41},
+  year		= {1991}
+}
+
 @Article{	  zukoff2023mirror,
   author	= {Zukoff, Sam},
   journal	= {Natural Language and Linguistic Theory},
